    * 1039 aix_diskiod: new check for disk IO on AIX
    * 0997 New checks and a special agent for ALLNET IP Sensoric devices...
    * 0175 logwatch.groups: New logwatch subcheck who can be used to group logfiles together....
    * 1041 aix_memory: new check for RAM and SWAP on AIX
    * 0998 ibm_imm_health: Trying to recognice newer versions of IBM IMM now too
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0171 FIX: hp_blade_psu: Fixed pnp template...
    * 0996 FIX: apc_symmetra_test: Handle unknown date of last self test as intended...
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path
    * 0827 FIX: lnx_thermal: Not checking active trip points (e.g. cooling device triggers) anymore
    * 1043 FIX: printer_supply: fix value error in default parameters...
    * 0626 FIX: veeam_jobs: agent now supports output lines longer than 80 chars

    Multisite:
    * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
    * 1033 New Mutisite filter for the number of services a host has...
    * 0949 quicksearch: now able to search for multiple hosts at once...
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output

    WATO: