@@ -76,47 +76,56 @@ states = {
     }
 
 def get_capability(cap_entry, id):
+    id = id - 1
     bit = bin(ord(cap_entry))[2:][id]
     if bit == "1":
         return capabilities[id]
 
 def inventory_raritan_pdu_inlet(info):
     inventory = []
+    i = 0
     for line in info[1]:
-        i = int(line[0].split(".")[2]) -1
+        i += 1
         cap = get_capability(info[0][0][2][0],i)
-        if line[3] == "1" and cap:
+        if line[2] == "1" and cap:
             item = info[0][0][0] + "-" + cap
+            inventory.append((item, None))
+            item = info[0][0][0] + "-" + cap + "_L1"
+            inventory.append((item, None))
+            item = info[0][0][0] + "-" + cap + "_L2"
+            inventory.append((item, None))
+            item = info[0][0][0] + "-" + cap + "_L3"
             inventory.append((item, None))
     return inventory
 
-def check_raritan_pdu_inlet(item, params, info):
-    state = 3
-    message = "Sensor not found"
-
+def check_raritan_pdu_inlet(item, _no_params, info):
+    kinds = { "": 4, "_L1": 5, "_L2": 6, "_L3": 7 }
     label = info[0][0][0]
     name = info[0][0][1]
+    i = 0
     for line in info[1]:
-        i = int(line[0].split(".")[2]) - 1
+        i += 1
         cap = get_capability(info[0][0][2][0],i)
-        if label + "-" + cap == item:
-            unit = units[int(line[1])]
-            digits = int(line[2])
-            avail = line[3]
-            status = int(line[4])
-            status_txt = states[status]
-            value = float(line[5]) / 10.0**digits
-            message = "sensor " + name
-            message += "status \"%s\", value %.2f %s" % (status_txt,value,unit)
-            perfdata = [ (cap, str(value)+unit) ]
-            if avail != "1" or status in ( 2, 6 ):
-                state = 2
-            elif status == 4:
-                state = 0
-            else:
-                state = 1
+        for mark, index in kinds.iteritems():
+            if cap and label + "-" + cap + mark == item:
+                unit = units[int(line[0])]
+                digits = int(line[1])
+                avail = line[2]
+                status = int(line[3])
+                status_txt = states[status]
+                value = float(line[index]) / 10.0**digits
+                message = "sensor " + name
+                message += "status \"%s\", value %.2f %s" % (status_txt,value,unit)
+                perfdata = [ (cap+mark, str(value)+unit) ]
+                if avail != "1" or status in ( 2, 6 ):
+                    state = 2
+                elif status == 4:
+                    state = 0
+                else:
+                    state = 1
+                return (state, message, perfdata)
 
-    return (state, message, perfdata)
+    return 3, "no such inlet data"
 
 check_info['raritan_pdu_inlet'] = {
   "inventory_function"  : inventory_raritan_pdu_inlet,
@@ -133,14 +142,24 @@ check_info['raritan_pdu_inlet'] = {
             ),
             ( ".1.3.6.1.4.1.13742.6",  # Properties of the sensors
                 [
-                 OID_END,
-                 "3.3.4.1.6", # inletSensorUnits
-                 "3.3.4.1.7", # inletDecimalDigits
-                 "5.2.3.1.2", # inlet sensor availability
-                 "5.2.3.1.3", # inlet sensor state
-                 "5.2.3.1.4", # inlet sensor value
+                 "3.3.4.1.6.1.1", # inletSensorUnits
+                 "3.3.4.1.7.1.1", # inletDecimalDigits
+                 "5.2.3.1.2.1.1", # inlet sensor availability
+                 "5.2.3.1.3.1.1", # inlet sensor state
+                 "5.2.3.1.4.1.1", # inlet sensor value
+                 "5.2.4.1.4.1.1.1", # inlet sensor L1 value
+                 "5.2.4.1.4.1.1.2", # inlet sensor L2 value
+                 "5.2.4.1.4.1.1.3", # inlet sensor L3 value
                  ]
-            )],
+            ),
+            #( ".1.3.6.1.4.1.13742.6.5.2.4.1.4.1.1",  # Properties of the sensors
+            #    [
+            #     "1", # inlet sensor values
+            #     "2", # inlet sensor values
+            #     "3", # inlet sensor values
+            #     ]
+            #),
+            ],
   "snmp_scan_function"  : lambda oid: \
                             oid(".1.3.6.1.4.1.13742.6.3.2.1.1.3.1").startswith("PX2-2")
 
