@@ -18,6 +18,7 @@
     * 0175 logwatch.groups: New logwatch subcheck who can be used to group logfiles together....
     * 1041 aix_memory: new check for RAM and SWAP on AIX
     * 0998 ibm_imm_health: Trying to recognice newer versions of IBM IMM now too
+    * 0628 raritan_pdu_inlet: now also monitors the three phases of the inlet
     * 0994 FIX: agent plugin smart: fixed syntax error
     * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
